new including other use cases to use nats integration scheme