@@ -4,18 +4,20 @@ import br.com.wallet.application.aspects.tracing.TraceContext;
 import org.jspecify.annotations.NonNull;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
-public record Wallet(@NonNull BigDecimal initialBalance,
-                     @NonNull UUID operationId) implements TraceContext {
+public record Wallet(@NonNull UUID id,
+                     BigDecimal initialBalance,
+                     UUID operationId) implements TraceContext {
     @Override
     public UUID operationId() {
         return this.operationId;
     }
     @Override
     public Map<String, String> traceTags() {
-        return Collections.emptyMap();
+        return Map.of(
+                "wallet.id", id.toString()
+        );
     }
 }
